--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yovo Mall - Ma Boutique Vitrine</title>
+    <title>Yovo Mall - Vitrine Classique</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-      body {
-        font-family: 'Inter', sans-serif;
-      }
-    </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #f0f0f0;
+      }
+      /* Style "Novice" : Bordures épaisses et contrastées */
+      .classic-border {
+        border: 4px solid #000;
+      }
+      .classic-border-heavy {
+        border: 8px solid #000;
+      }
+    </style>
 </head>
-<body class="bg-gray-50 text-gray-900 antialiased">
+<body>
     <div id="root"></div>
+    <!-- Chargement du code principal -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
